Capitulo-7/inseguro-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: inseguro-pod
  namespace: produccion
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
    securityContext:
      runAsUser: 0
