Capitulo-7/seguro-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: seguro-pod
  namespace: produccion
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
    securityContext:
      runAsUser: 1000
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      capabilities:
        drop: ["ALL"]
      seccompProfile:
        type: RuntimeDefault
